fix sonar findings